--- a/404.html
+++ b/404.html
@@ -126,9 +126,9 @@
 
 <body>
   <header><a href="https://www.earnestma.xyz" class="title">
-  <h2>Earnest Ma</h2>
+  <h2>earnest ma</h2>
 </a>
-<nav><a href="https://www.earnestma.xyz/">This site is not hosted at Github Pages anymore. Permanent URL is still at www.earnestma.xyz, update your bookmarks</a>
+<nav><a href="https://www.earnestma.xyz/">This site is not hosted at Github Pages anymore. Permanent URL is still at www.earnestma.xyz, please update your bookmarks!</a>
 
 </nav>
 </header>
