--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://www.earnestma.xyz</title><link rel="canonical" href="https://www.earnestma.xyz"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://www.earnestma.xyz" /></head></html>
+<!DOCTYPE html><html><head><title>https://earnestma.com</title><link rel="canonical" href="https://earnestma.com"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://earnestma.com" /></head></html>
